--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -10,7 +10,6 @@
   font-weight: 500;
   color: rgb(32, 31, 31);
 }
-.activeLink {
-  composes: link;
-  background-color: aliceblue;
+.link.activeLink {
+  background-color: rgb(248, 248, 248);
 }
