--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,13 +1,17 @@
 .header {
-  padding: 30px 0;
+  padding: 40px 30px;
+
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 1), -23px 0 20px -23px rgba(0, 0, 0, 0.8),
+    23px 0 20px -23px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
 .link {
   text-decoration: none;
+  border-radius: 15px;
   cursor: pointer;
   padding: 10px 15px;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 25px;
+  font-weight: 700;
   color: rgb(32, 31, 31);
 }
 .link.activeLink {
