--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,10 +1,7 @@
 .header {
   padding: 40px 50px;
-
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 1), -23px 0 20px -23px rgba(0, 0, 0, 0.8),
-    23px 0 20px -23px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: -13px 5px 20px 0px rgb(34 60 80 / 60%);
 }
-
 .link {
   text-decoration: none;
   border-radius: 15px;
