--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -10,7 +10,19 @@
   font-size: 25px;
   font-weight: 700;
   color: rgb(32, 31, 31);
+  transition: color 300ms ease, background-color 300ms ease;
 }
+
+.link:first-child {
+  margin-right: 10px;
+}
+.link:hover,
+.link:focus {
+  background-color: rgb(156, 99, 209);
+  color: rgb(248, 248, 248);
+}
+
 .link.activeLink {
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(156, 99, 209);
+  color: rgb(248, 248, 248);
 }
